pkgs/dartcv_core/src/core.h

CvStatus *Mat_FromPtr(Mat m, int rows, int cols, int type, int prows, int pcols, Mat *rval);
CvStatus *Mat_FromCMat(Mat m, Mat *rval);
CvStatus *Mat_FromRange(Mat m, int rowStart, int rowEnd, int colStart, int colEnd, Mat *rval);
int Mat_Flags(Mat m);
bool Mat_Empty(Mat m);
bool Mat_IsContinuous(Mat m);
bool Mat_IsSubmatrix(Mat m);
int Mat_ElemSize(Mat m);
int Mat_ElemSize1(Mat m);
CvStatus *Mat_LocateROI(Mat m, Size *wholeSize, Point *ofs);
CvStatus *Mat_GetUChar(Mat m, int row, int col, uint8_t *rval);
CvStatus *Mat_GetUChar3(Mat m, int x, int y, int z, uint8_t *rval);
CvStatus *Mat_GetSChar(Mat m, int row, int col, int8_t *rval);
CvStatus *Mat_GetSChar3(Mat m, int x, int y, int z, int8_t *rval);
CvStatus *Mat_GetUShort(Mat m, int row, int col, uint16_t *rval);
CvStatus *Mat_GetUShort3(Mat m, int x, int y, int z, uint16_t *rval);
CvStatus *Mat_GetShort(Mat m, int row, int col, int16_t *rval);
CvStatus *Mat_GetShort3(Mat m, int x, int y, int z, int16_t *rval);
CvStatus *Mat_GetInt(Mat m, int row, int col, int32_t *rval);
CvStatus *Mat_GetInt3(Mat m, int x, int y, int z, int32_t *rval);
CvStatus *Mat_GetFloat(Mat m, int row, int col, float *rval);
CvStatus *Mat_GetFloat3(Mat m, int x, int y, int z, float *rval);
CvStatus *Mat_GetDouble(Mat m, int row, int col, double *rval);
CvStatus *Mat_GetDouble3(Mat m, int x, int y, int z, double *rval);
Vec2b *Mat_GetVec2b(Mat m, int row, int col);
Vec3b *Mat_GetVec3b(Mat m, int row, int col);
Vec4b *Mat_GetVec4b(Mat m, int row, int col);
Vec2s *Mat_GetVec2s(Mat m, int row, int col);
Vec3s *Mat_GetVec3s(Mat m, int row, int col);
Vec4s *Mat_GetVec4s(Mat m, int row, int col);
Vec2w *Mat_GetVec2w(Mat m, int row, int col);
Vec3w *Mat_GetVec3w(Mat m, int row, int col);
Vec4w *Mat_GetVec4w(Mat m, int row, int col);
Vec2i *Mat_GetVec2i(Mat m, int row, int col);
Vec3i *Mat_GetVec3i(Mat m, int row, int col);
Vec4i *Mat_GetVec4i(Mat m, int row, int col);
Vec6i *Mat_GetVec6i(Mat m, int row, int col);
Vec8i *Mat_GetVec8i(Mat m, int row, int col);
Vec2f *Mat_GetVec2f(Mat m, int row, int col);
Vec3f *Mat_GetVec3f(Mat m, int row, int col);
Vec4f *Mat_GetVec4f(Mat m, int row, int col);
Vec6f *Mat_GetVec6f(Mat m, int row, int col);
Vec2d *Mat_GetVec2d(Mat m, int row, int col);
Vec3d *Mat_GetVec3d(Mat m, int row, int col);
Vec4d *Mat_GetVec4d(Mat m, int row, int col);
Vec6d *Mat_GetVec6d(Mat m, int row, int col);
CvStatus *Mat_Eigen(Mat src, Mat eigenvalues, Mat eigenvectors, bool *rval);
CvStatus *Mat_EigenNonSymmetric(Mat src, Mat eigenvalues, Mat eigenvectors);
CvStatus *Mat_Exp(Mat src, Mat dst);
CvStatus *Mat_ExtractChannel(Mat src, Mat dst, int coi);
CvStatus *Mat_FindNonZero(Mat src, Mat idx);
CvStatus *Mat_Flip(Mat src, Mat dst, int flipCode);
CvStatus *Mat_Gemm(Mat src1, Mat src2, double alpha, Mat src3, double beta, Mat dst, int flags);
CvStatus *Mat_GetOptimalDFTSize(int vecsize, int *rval);
CvStatus *Mat_Hconcat(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_Idct(Mat src, Mat dst, int flags);
CvStatus *Mat_Idft(Mat src, Mat dst, int flags, int nonzeroRows);
CvStatus *Mat_InRange(Mat src, Mat lowerb, Mat upperb, Mat dst);
CvStatus *Mat_InRangeWithScalar(Mat src, const Scalar lowerb, const Scalar upperb, Mat dst);
CvStatus *Mat_InsertChannel(Mat src, Mat dst, int coi);
CvStatus *Mat_Invert(Mat src, Mat dst, int flags, double *rval);
CvStatus *Mat_Log(Mat src, Mat dst);