lib/src/g/core.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Pointer<ffi.Bool>)>()
external ffi.Pointer<CvStatus> Mat_Eigen(
  Mat src,
  Mat eigenvalues,
  Mat eigenvectors,
  ffi.Pointer<ffi.Bool> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_EigenNonSymmetric(
  Mat src,
  Mat eigenvalues,
  Mat eigenvectors,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_ElemSize(
  Mat m,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_ElemSize1(
  Mat m,
);

@ffi.Native<ffi.Bool Function(Mat)>()
external bool Mat_Empty(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Exp(
  Mat src,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_ExtractChannel(
  Mat src,
  Mat dst,
  int coi,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Eye_Async(
  int rows,
  int cols,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_FindNonZero(
  Mat src,
  Mat idx,
);

@ffi.Native<ffi.Int Function(Mat)>(isLeaf: true)
external int Mat_Flags(
  Mat m,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Flip(
  Mat src,
  Mat dst,
  int flipCode,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_FromCMat(
  Mat m,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_FromPtr(
  Mat m,
  int rows,
  int cols,
  int type,
  int prows,
  int pcols,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_FromRange(
  Mat m,
  int rowStart,
  int rowEnd,
  int colStart,
  int colEnd,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Double, Mat, ffi.Double, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Gemm(
  Mat src1,
  Mat src2,
  double alpha,
  Mat src3,
  double beta,
  Mat dst,
  int flags,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Mat_GetDouble(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Mat_GetDouble3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Float>)>()
external ffi.Pointer<CvStatus> Mat_GetFloat(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Float> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Float>)>()
external ffi.Pointer<CvStatus> Mat_GetFloat3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Float> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int32>)>()
external ffi.Pointer<CvStatus> Mat_GetInt(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Int32> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int32>)>()
external ffi.Pointer<CvStatus> Mat_GetInt3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Int32> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> Mat_GetOptimalDFTSize(
  int vecsize,
  ffi.Pointer<ffi.Int> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int8>)>()
external ffi.Pointer<CvStatus> Mat_GetSChar(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Int8> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int8>)>()
external ffi.Pointer<CvStatus> Mat_GetSChar3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Int8> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int16>)>()
external ffi.Pointer<CvStatus> Mat_GetShort(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Int16> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int16>)>()
external ffi.Pointer<CvStatus> Mat_GetShort3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Int16> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Uint8>)>()
external ffi.Pointer<CvStatus> Mat_GetUChar(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Uint8> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Uint8>)>()
external ffi.Pointer<CvStatus> Mat_GetUChar3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Uint8> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Uint16>)>()
external ffi.Pointer<CvStatus> Mat_GetUShort(
  Mat m,
  int row,
  int col,
  ffi.Pointer<ffi.Uint16> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Uint16>)>()
external ffi.Pointer<CvStatus> Mat_GetUShort3(
  Mat m,
  int x,
  int y,
  int z,
  ffi.Pointer<ffi.Uint16> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2b>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2b(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2b> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2d>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2d(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2f>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2f(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2i>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2i(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2s>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2s(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2s> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec2w>)>()
external ffi.Pointer<CvStatus> Mat_GetVec2w(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec2w> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3b>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3b(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3b> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3d>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3d(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3f>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3f(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3i>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3i(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3s>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3s(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3s> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec3w>)>()
external ffi.Pointer<CvStatus> Mat_GetVec3w(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec3w> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4b>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4b(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4b> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4d>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4d(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4f>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4f(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4i>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4i(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4s>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4s(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4s> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec4w>)>()
external ffi.Pointer<CvStatus> Mat_GetVec4w(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec4w> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec6d>)>()
external ffi.Pointer<CvStatus> Mat_GetVec6d(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec6d> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec6f>)>()
external ffi.Pointer<CvStatus> Mat_GetVec6f(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec6f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec6i>)>()
external ffi.Pointer<CvStatus> Mat_GetVec6i(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec6i> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Pointer<Vec8i>)>()
external ffi.Pointer<CvStatus> Mat_GetVec8i(
  Mat m,
  int row,
  int col,
  ffi.Pointer<Vec8i> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Hconcat(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Idct(
  Mat src,
  Mat dst,
  int flags,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Idft(
  Mat src,
  Mat dst,
  int flags,
  int nonzeroRows,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_InRange(
  Mat src,
  Mat lowerb,
  Mat upperb,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Scalar, Scalar, Mat)>()
external ffi.Pointer<CvStatus> Mat_InRangeWithScalar(
  Mat src,
  Scalar lowerb,
  Scalar upperb,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_InsertChannel(
  Mat src,
  Mat dst,
  int coi,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>)>()
external ffi.Pointer<CvStatus> Mat_Invert(
  Mat src,
  Mat dst,
  int flags,
  ffi.Pointer<ffi.Double> rval,
);

@ffi.Native<ffi.Bool Function(Mat)>(isLeaf: true)
external bool Mat_IsContinuous(
  Mat m,
);

@ffi.Native<ffi.Bool Function(Mat)>(isLeaf: true)
external bool Mat_IsSubmatrix(
  Mat m,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Pointer<Size>, ffi.Pointer<Point>)>()
external ffi.Pointer<CvStatus> Mat_LocateROI(
  Mat m,
  ffi.Pointer<Size> wholeSize,
  ffi.Pointer<Point> ofs,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Log(
  Mat src,
  Mat dst,
);
